# pr01-app

./: .gitignore  README.md  SETUP.md  pnpm-lock.yaml  turbo.json
apps/ocr-service/: .gitignore  Dockerfile  README.md  main.py  package.json  pyproject.toml  requirements.txt
apps/web/: .env.example  middleware.ts  next-env.d.ts  next.config.mjs  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(auth)/sign-in/: page.tsx
apps/web/app/(auth)/sign-up/: page.tsx
apps/web/app/(editor)/: layout.tsx
apps/web/app/(editor)/new/: page.tsx
apps/web/app/_components/: GlobalHeader.tsx
apps/web/app/actions/: article.ts
apps/web/app/api/fields/: route.ts
apps/web/app/api/ocr/: route.ts
apps/web/app/articles/new/: page.tsx
apps/web/app/ocr-viewer/: _types.ts  page.tsx
apps/web/app/ocr-viewer/_components/: ContentTabs.tsx  ErrorAlert.tsx  FieldSchemaDetectButton.tsx  FileUploadSection.tsx  ModelSelect.tsx  OcrCanvas.tsx  SchemaExportButton.tsx  SegmentEditor.tsx  SegmentRunPanel.tsx  UploadSection.tsx
apps/web/app/ocr-viewer/_hooks/: useLayoutSelection.ts  useOcrRequest.ts  usePdfPreview.ts  useSegments.ts
apps/web/app/ocr-viewer/_utils/: generateSegmentPdf.ts  geometry.ts
apps/web/app/ocr-viewer/compose/: page.tsx
apps/web/app/pricing/: page.tsx
apps/web/lib/: client-cookies.ts  custom-shapes.tsx  image-upload.ts  tldraw-templates.ts
apps/web/public/llm-image/: .gitkeep
apps/web/public/llm-out/: llm-fields-single-page0-2025-11-11T01-32-45-036Z.json
apps/web/public/llm-param/: .gitkeep
docs/: NOTE_AI_GENERATION.md  OCR_SETUP.md
(+26 files in other folders)
