[project]
name = "ocr-service"
version = "0.0.1"
description = "OCR service using YomiToku"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "python-multipart==0.0.12",
    "pillow==11.0.0",
    "torch>=2.5.0",
    "yomitoku>=0.10.1",
    "pdf2image==1.17.0",
    "pydantic==2.10.0",
]

